ldap/overlays/l2/networkpolicy.yaml
---
# NetworkPolicy for LDAP server on default pod network
# This policy controls access to the LDAP VM's pod network interface
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: demo-ldap-ingress
  namespace: demo-ldap
spec:
  podSelector: {}

  policyTypes:
    - Ingress

  ingress:
    # allow from all to dhcpclient
    # - from:
    #   ports:
    #     - port: 67
    #       protocol: UDP
    #     - port: 68
    #       protocol: UDP

    # allow from wifi and lab network to ldap service
    - from:
        - ipBlock:
            cidr: 10.168.4.0/24
            except: []
        - ipBlock:
            cidr: 192.168.4.0/24
            except: []
      ports:
        - port: 389
          protocol: TCP
        - port: 636
          protocol: TCP

    # allow from wifi network to ssh service
    - from:
        - ipBlock:
            cidr: 192.168.3.0/24
            except: []
      ports:
        - port: 22
          protocol: TCP
